--- a/my-new-app/src/style.css
+++ b/my-new-app/src/style.css
@@ -13,6 +13,7 @@
 .nav-item-container {
   display: flex;
   justify-content: space-around;
+  align-content: space-around;
 }
 
 .nav-item-container > li {
