--- a/my-new-app/src/style.css
+++ b/my-new-app/src/style.css
@@ -37,3 +37,12 @@
   padding: 10px;
   background-color: white;
 }
+
+.chat-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.chat-container > div {
+  width: 33.333%;
+}
