messing with the ACME react css.

--- a/my-new-app/src/style.css
+++ b/my-new-app/src/style.css
@@ -54,7 +54,9 @@
 }
 
 .app-navbar > li {
-  font-size: 24px;
+  font-size: 1.5em;
   list-style: none;
+  text-decoration: none;
   margin: 0;
+  border: solid 1px red;
 }
