--- a/my-new-app/src/style.css
+++ b/my-new-app/src/style.css
@@ -60,3 +60,15 @@
   margin: 0;
   border: solid 1px red;
 }
+
+.open-btn {
+  background-color: green;
+  border-radius: 15px;
+  font-size: 24px;
+}
+
+.close-btn {
+  background-color: red;
+  border-radius: 15px;
+  font-size: 24px;
+}
